--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simple React Portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/jays1c/react-portfolio",
