--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-scripts": "4.0.3",
     "typewriter-effect": "^2.19.0",
+    "typewriting-react": "^1.0.8",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
