--- a/package.json
+++ b/package.json
@@ -4,20 +4,28 @@
   "private": true,
   "homepage": "https://github.com/jays1c/react-portfolio",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "emoji-picker-react": "^3.5.1",
+    "emoji-regex": "^10.1.0",
     "file-saver": "^2.0.5",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-card-with-image": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "react-scripts": "4.0.3",
+    "react-reveal": "^1.2.2",
+    "react-reveal-effect": "^3.0.0",
+    "react-reveal-responsive-carousel": "^1.0.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5",
     "typewriter-effect": "^2.19.0",
     "typewriting-react": "^1.0.8",
     "uniqid": "^5.4.0",
@@ -45,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^8.3.0",
