--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "homepage": "https://github.com/jays1c/react-portfolio",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@emailjs/browser": "^3.6.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "emailjs": "^4.0.0",
     "emoji-picker-react": "^3.5.1",
     "emoji-regex": "^10.1.0",
     "file-saver": "^2.0.5",
